--- a/EDU.API/appsettings.json
+++ b/EDU.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Server=tcp:lms-customer-db.database.windows.net,1433;Initial Catalog=lms-customer-db;Persist Security Info=False;User ID=bilisimakademisi;Password=@kademi2022;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "SqlConnection": "Server=lms-customer-db-server.database.windows.net;Initial Catalog=lms-customer-db;Persist Security Info=False;User ID=bilisimakademisi;Password=@kademi2022;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "Logging": {
